Move header element out of container div

--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/style.css" />
   </head>
   <body>
-    <header class="container">
+    <header>
       <h2>Artify</h2>
       <nav>
         <ul>
