--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
       </nav>
     </header>
 
-    <div id="gallery"></div>
+    <div class="grid"></div>
 
     <script type="module" src="js/index.js"></script>
   </body>
