Update frontend code to add styling

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <header>
-      <h2>Artify</h2>
+      <h2><a href="#" id="home">Artify</a></h2>
       <nav>
         <ul>
           <li><a href="/modern-art" id="modern-art">Modern Art</a></li>
@@ -26,7 +26,9 @@
       </nav>
     </header>
 
-    <div class="grid"></div>
+    <div class="grid">
+      <!-- Data will be rendered here -->
+    </div>
 
     <script type="module" src="js/index.js"></script>
   </body>
