Update links and showFavourites logic

--- a/src/index.html
+++ b/src/index.html
@@ -13,7 +13,7 @@
         <ul>
           <li><a href="/modern-art" id="modern-art">Modern Art</a></li>
           |
-          <li><a href="/classics" id="paintings">Classics</a></li>
+          <li><a href="/classics" id="classics">Classics</a></li>
           |
           <li><a href="/sculptures" id="sculptures">Sculptures</a></li>
           |
